src/objects/Lead__c.object
<CustomObject>
    <description>Leads</description>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <label>Ad Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Account.Employee_Department__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select an active sales.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To (Old Field)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative__c</fullName>
        <label>Creative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup__c</fullName>
        <label>Followup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Form__c</fullName>
        <label>From Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Source__c</fullName>
        <label>From Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Referer__c</fullName>
        <label>HTTP Referer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Useragent__c</fullName>
        <label>HTTP Useragent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncontactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Value__c</fullName>
        <label>Lead Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matchtype__c</fullName>
        <label>Matchtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sitelink__c</fullName>
        <label>Sitelink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>session_id__c</fullName>
        <label>session_id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lead - Old</label>
    <listViews>
        <fullName>Aarons_Leads</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To_Id__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Source__c</field>
            <operation>contains</operation>
            <value>GMT</value>
        </filters>
        <label>GMT Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Company__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To_Id__c</columns>
        <columns>Followup__c</columns>
        <columns>Notes__c</columns>
        <columns>From_Form__c</columns>
        <columns>From_Source__c</columns>
        <columns>HTTP_Referer__c</columns>
        <columns>IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Form__c</field>
            <operation>notContain</operation>
            <value>adadviser</value>
        </filters>
        <label>a All</label>
        <sharedTo>
            <role>Adwords_SEO_Client_Manger</role>
            <role>BJBDigital</role>
            <role>BJBDigitalProgrammer</role>
            <role>BJBDigitalWebManager</role>
            <role>BJBGlobalAccountsAdmin</role>
            <role>BJBGlobalCEO</role>
            <role>BJB_Global_CFO</role>
            <role>Client_Manager_GMT_Team_A_Leader</role>
            <role>Client_Manager_GMT_Team_A_Member</role>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_A_Member</role>
            <role>Client_Manager_Team_B_Leader</role>
            <role>Client_Manager_Team_B_Member</role>
            <role>Client_Manager_Team_C_Leader</role>
            <role>Client_Manager_Team_C_Member</role>
            <role>Client_Resolution_Manager_Team_A</role>
            <role>Client_Resolution_Manager_Team_B</role>
            <role>Client_Resolution_Manager_Team_C</role>
            <role>Digital_Strategy_Sales</role>
            <role>GMTAustralia</role>
            <role>GMT_Sales_Manager</role>
            <role>SLXAusClientOperationsManager</role>
            <role>SLXAusHumanResourcesManager</role>
            <role>SLXAusWebProjectManager</role>
            <role>SLXSalesManager</role>
            <role>SLX_Aus_Marketing_Manager</role>
            <role>SLX_Aus_Receptionist</role>
            <role>SLX_Aus_SEO_Team_A_Account_Manager</role>
            <role>SLX_Aus_SEO_Team_A_Manager</role>
            <role>Sales_Manager_Assistant_Digital_Strategy</role>
            <role>Sales_Manager_Assistant_GMT</role>
            <role>Sales_Manager_Assistant_SLX</role>
            <role>SponsoredLinXAustralia</role>
            <role>SponsoredLinXSystemsDevelopment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cody_s_leads</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>From_Form__c</columns>
        <columns>From_Source__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>Cody,Pearson,Manning,Christie,Joshua Hart</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>Leads - A Codys</label>
        <sharedTo>
            <roleAndSubordinates>SLXSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Isaacs_Leads</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Followup__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>golding</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>DST - Simon Golding</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jarvis_Leads</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>jarvis,morgan,Jamie Arthur</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>Leads - A Rebecca M</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Alex</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>Gretel</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>DST - Gretel Phillips</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Caitlin</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>tate</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>DST - Tate</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Daniel_M</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>From_Form__c</columns>
        <columns>From_Source__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>Beatty</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>DST - Josh Beatty</label>
        <sharedTo>
            <roleAndSubordinates>SLXSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ThisMonth_SponsoredLinX</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company__c</field>
            <operation>contains</operation>
            <value>sponsoredlinx</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>ThisMonth_SponsoredLinX</label>
        <sharedTo>
            <group>Daniel_Andreotti</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Months_Spam_Leads_SLX</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>From_Source__c</columns>
        <columns>From_Form__c</columns>
        <columns>HTTP_Referer__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Spam</value>
        </filters>
        <filters>
            <field>HTTP_Referer__c</field>
            <operation>notContain</operation>
            <value>getmoretraffic.com.au</value>
        </filters>
        <filters>
            <field>From_Source__c</field>
            <operation>notContain</operation>
            <value>Get More Traffic,GMT</value>
        </filters>
        <label>This Months Spam Leads - SLX</label>
        <sharedTo>
            <role>Client_Manager_Team_A_Member</role>
            <role>SLXSalesManager</role>
            <role>Sales_Manager_Assistant_SLX</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Weeks_Leads</fullName>
        <columns>NAME</columns>
        <columns>From_Source__c</columns>
        <columns>From_Form__c</columns>
        <columns>Website__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>a This Weeks Leads</label>
    </listViews>
    <listViews>
        <fullName>Tyrone_Leads</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>andreotti</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>DST - Daniel Andreotti</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>adadviser</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Assigned_To_Id__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Email__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Form__c</field>
            <operation>contains</operation>
            <value>adviser</value>
        </filters>
        <label>a adadviser</label>
    </listViews>
    <listViews>
        <fullName>hameeda_Leads</fullName>
        <columns>Assigned_To_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Followup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To_Id__c</field>
            <operation>contains</operation>
            <value>hameeda,toby,cliff,benjamin,lynn,rebecca gates,caleb,Hart,breeze</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>New,Follow Up</value>
        </filters>
        <label>Leads - A Toby</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SLXSalesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads - Old</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>